objects/Case__x.object
<CustomObject>
    <fields>
        <fullName>Email2CaseSender_c__c</fullName>
        <externalDeveloperName>Email2CaseSender__c</externalDeveloperName>
        <inlineHelpText>Select the Email2Case that will send the ATC to the Contact
If the customer answers to the ATC, it will be canned into the Case's Email.</inlineHelpText>
        <label>Email2Case Sender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>whenutest2+e2cclinicalbmxrout@gmail.com</fullName>
                </value>
                <value>
                    <fullName>whenutest2+e2cindustrybmxrout@gmail.com</fullName>
                </value>
                <value>
                    <fullName>whenutest2+fre2cclinicalbmxrout@gmail.com</fullName>
                </value>
                <value>
                    <fullName>whenutest2+fre2cindustrybmxrout@gmail.com</fullName>
                </value>
                <value>
                    <fullName>whenutest2+usvilinkrout@gmail.com</fullName>
                </value>
                <value>
                    <fullName>whenutest2+e2cclinicalbmxdesign@gmail.com</fullName>
                </value>
                <value>
                    <fullName>CustomerService-BTA@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>CustomerService-Connectivity@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>CustomerService-IDAST@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>CustomerService-ImmunoMolecular@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>UStechnicalsupport@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>Csi.stl@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>CRCclinique@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>CRCindustrie@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>CanadaHotline@biomerieux.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email2Case_Origin_c__c</fullName>
        <externalDeveloperName>Email2Case_Origin__c</externalDeveloperName>
        <inlineHelpText>The Email2Case origin (if applicable)</inlineHelpText>
        <label>Web/Email2Case Origin</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntitlementId__c</fullName>
        <externalDeveloperName>EntitlementId</externalDeveloperName>
        <inlineHelpText>Search Entitlements of the Asset referenced in the Case, and only of this Asset.
When Case is saved, also System entitlements can be searched in this field.</inlineHelpText>
        <label>Entitlement ID</label>
        <length>18</length>
        <referenceTo>Entitlement__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Entitlement_Name__c</fullName>
        <label>Entitlement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorCode_c__c</fullName>
        <externalDeveloperName>ErrorCode__c</externalDeveloperName>
        <inlineHelpText>Enter 2 characters of the Code Group and click the search lookup</inlineHelpText>
        <label>Error Code</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case7</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Error_Code_Name_c__c</fullName>
        <externalDeveloperName>Error_Code_Name__c</externalDeveloperName>
        <label>Error Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLOfflineAssetNotFound_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSLOfflineAssetNotFound__c</externalDeveloperName>
        <label>FSL Offline Asset Not Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_c__c</fullName>
        <externalDeveloperName>Feedback__c</externalDeveloperName>
        <label>Feedback</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FirstL2EscalationDate_c__c</fullName>
        <externalDeveloperName>FirstL2EscalationDate__c</externalDeveloperName>
        <inlineHelpText>The first time the Case was escalated from level 1 to Level 2</inlineHelpText>
        <label>First L2 Escalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FirstL2OwnershipTaken_c__c</fullName>
        <externalDeveloperName>FirstL2OwnershipTaken__c</externalDeveloperName>
        <label>First L2 Ownership Taken</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FixedOnPhone_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FixedOnPhone__c</externalDeveloperName>
        <inlineHelpText>As CSR, you fixed that Case through remote access without needing a field intervention</inlineHelpText>
        <label>Fixed Remotely</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FunctionalLocation_c__c</fullName>
        <externalDeveloperName>FunctionalLocation__c</externalDeveloperName>
        <inlineHelpText>The System (or Root Asset) of the Asset concerned by the Case
Hover-Over to see the Functional Location number (SAP Asset Number)</inlineHelpText>
        <label>System</label>
        <length>18</length>
        <referenceTo>Asset__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case1</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Functional_Location_Number_c__c</fullName>
        <externalDeveloperName>Functional_Location_Number__c</externalDeveloperName>
        <label>Functional Location Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDPR_L1Q1_c__c</fullName>
        <externalDeveloperName>GDPR_L1Q1__c</externalDeveloperName>
        <inlineHelpText>Have data containing protected patient data been copied from customer site to any bioMérieux system for this case?</inlineHelpText>
        <label>Patient data copied to BMX LCS System ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDPR_L1Q2_c__c</fullName>
        <externalDeveloperName>GDPR_L1Q2__c</externalDeveloperName>
        <inlineHelpText>If yes, did you follow corporate procedure on protection of patient data (SOP 031664 - Corporate Procedure to Protect Patient Data)?</inlineHelpText>
        <label>L1 - If yes, SOP 031664 followed ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDPR_L2Q1_c__c</fullName>
        <externalDeveloperName>GDPR_L2Q1__c</externalDeveloperName>
        <inlineHelpText>Have data containing protected patient data linked to this case been copied from customer site to any bioMérieux system for Level 2 analysis?</inlineHelpText>
        <label>Patient data copied to BMX L2 System ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GlobalFieldAction_c__c</fullName>
        <externalDeveloperName>GlobalFieldAction__c</externalDeveloperName>
        <label>Global Field Action</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasNewCaseCommentIcon_c__c</fullName>
        <externalDeveloperName>HasNewCaseCommentIcon__c</externalDeveloperName>
        <inlineHelpText>Shows a Comment icon when this Case has a New Case Comment
Shows a Dash icon when this Case does not have any new Case Comment</inlineHelpText>
        <label>New Comment</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HasNewEmailCheckbox_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasNewEmailCheckbox__c</externalDeveloperName>
        <inlineHelpText>When a new email from custom is received in the Case, this checkbox is checked.
When an email is sent from the Case, this checkbox is unchecked
You can also manually uncheck it here or with the "Unflag" quick action in the feed view.</inlineHelpText>
        <label>New Email from Customer</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasNewEmailicon_c__c</fullName>
        <externalDeveloperName>HasNewEmailicon__c</externalDeveloperName>
        <label>New Email from Customer</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HasUserOwner_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasUserOwner__c</externalDeveloperName>
        <label>Has User Owner</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_data_containing_Patient_Health_Info__c</fullName>
        <externalDeveloperName>Have_data_containing_Patient_Health_Info__c</externalDeveloperName>
        <label>Have data containing Patient Health Info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Have data containing Patient Health Information been copied from customer site to any bioMérieux system for this case?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INVEST_c__c</fullName>
        <externalDeveloperName>INVEST__c</externalDeveloperName>
        <inlineHelpText>Decision tree auto-updates "INVEST" field to Yes or No.
If "INVEST"=No, then "No Invest Justification" is mandatory</inlineHelpText>
        <label>INVEST</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Info1_c__c</fullName>
        <externalDeveloperName>Info1__c</externalDeveloperName>
        <inlineHelpText>If Case Type is Non Qualified, please select an appropriate Case Type</inlineHelpText>
        <label>Info</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InterfaceErrorMessage_c__c</fullName>
        <externalDeveloperName>InterfaceErrorMessage__c</externalDeveloperName>
        <label>SAP Interface Error Message</label>
        <length>131072</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InterfaceStatus_c__c</fullName>
        <externalDeveloperName>InterfaceStatus__c</externalDeveloperName>
        <label>SAP Interface Status</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To be sent</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Sending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvQ1_c__c</fullName>
        <externalDeveloperName>InvQ1__c</externalDeveloperName>
        <inlineHelpText>Are any Complaint data missing?</inlineHelpText>
        <label>InvQ1 Any Complaint data missing?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvQ2_c__c</fullName>
        <externalDeveloperName>InvQ2__c</externalDeveloperName>
        <inlineHelpText>Is the Technical Complaint an RE?</inlineHelpText>
        <label>InvQ2 Is the Technical Complaint an RE ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No or Not decided yet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvQ3_c__c</fullName>
        <externalDeveloperName>InvQ3__c</externalDeveloperName>
        <inlineHelpText>Does an open Investigation on this issue already exist ?</inlineHelpText>
        <label>InvQ3 Open Invest exist on issue?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvestSubmittedBy_c__c</fullName>
        <externalDeveloperName>InvestSubmittedBy__c</externalDeveloperName>
        <inlineHelpText>Hidden field Needed For Trackwise. The "Employee Number" of the User who updated the INVEST to YES or NO.</inlineHelpText>
        <label>Invest Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IrrelevantCaseReason_c__c</fullName>
        <externalDeveloperName>IrrelevantCaseReason__c</externalDeveloperName>
        <inlineHelpText>When Case Status determined as "Irrelevant" a reason must be given</inlineHelpText>
        <label>Irrelevant Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate case</fullName>
                </value>
                <value>
                    <fullName>Case created by mistake</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsCaseAccountAssetAccount_c__c</fullName>
        <externalDeveloperName>IsCaseAccountAssetAccount__c</externalDeveloperName>
        <label>Is Case Account = Asset Account?</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsCaseOpen5Days_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsCaseOpen5Days__c</externalDeveloperName>
        <inlineHelpText>For Reporting Use Only: Determines if the time the case was open (closed date - created date) is greater than 5 days.</inlineHelpText>
        <label>Is Case Open &gt;5 Days</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCasePor_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsCasePor__c</externalDeveloperName>
        <label>Is Case POR?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosedOnCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsClosedOnCreate</externalDeveloperName>
        <label>Closed When Created</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsClosed</externalDeveloperName>
        <label>Closed</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCreatedByCurrentUser_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsCreatedByCurrentUser__c</externalDeveloperName>
        <label>Is Created By Current User?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEscalated__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsEscalated</externalDeveloperName>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInternalCase_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsInternalCase__c</externalDeveloperName>
        <inlineHelpText>If this Case is internal, check this box</inlineHelpText>
        <label>Internal Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsL2DeescalationManagedByL1_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsL2DeescalationManagedByL1__c</externalDeveloperName>
        <label>Is L2 Deescalation Managed by L1?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPlatinum_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsPlatinum__c</externalDeveloperName>
        <label>Platinum</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStopped__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsStopped</externalDeveloperName>
        <label>Stopped</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUserSapOwner_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsUserSapOwner__c</externalDeveloperName>
        <label>Is User SAP Owner?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Case_Open_25_Days_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Case_Open_25_Days__c</externalDeveloperName>
        <inlineHelpText>For Reporting Use Only: Determines if the time the case was open (closed date - created date) is greater than 25 days.</inlineHelpText>
        <label>Is Case Open &gt;25 Days</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Install_Failure_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Install_Failure__c</externalDeveloperName>
        <inlineHelpText>Installation Failure (Error code = INSTALLATION PROBLEM - C201 or INSTALLATION ISSUE - C201)</inlineHelpText>
        <label>Is Install Failure?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_case_open_14_days_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_case_open_14_days__c</externalDeveloperName>
        <label>Is case open &gt;14 days</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_case_open_7_days_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_case_open_7_days__c</externalDeveloperName>
        <label>Is case open &gt;7 days</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Justification_decision_make_c__c</fullName>
        <externalDeveloperName>Justification_decision_make__c</externalDeveloperName>
        <label>Justification decision maker</label>
        <length>18</length>
        <referenceTo>User__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case5</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>L1DeescalationResponseTime_c__c</fullName>
        <externalDeveloperName>L1DeescalationResponseTime__c</externalDeveloperName>
        <inlineHelpText>Hours</inlineHelpText>
        <label>L1 Deescalation Response Time</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L1Owner_c__c</fullName>
        <externalDeveloperName>L1Owner__c</externalDeveloperName>
        <label>Level 1 Owner</label>
        <length>18</length>
        <referenceTo>User__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case2</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>L1Owner_calc_c__c</fullName>
        <externalDeveloperName>L1Owner_calc__c</externalDeveloperName>
        <label>L1Owner (calculated)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L1_Owner_Name_c__c</fullName>
        <externalDeveloperName>L1_Owner_Name__c</externalDeveloperName>
        <label>L1 Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2Owner_c__c</fullName>
        <externalDeveloperName>L2Owner__c</externalDeveloperName>
        <label>Level 2 Owner</label>
        <length>18</length>
        <referenceTo>User__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case1</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>L2_Owner_Name_c__c</fullName>
        <externalDeveloperName>L2_Owner_Name__c</externalDeveloperName>
        <label>L2 Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LREIndicator_c__c</fullName>
        <externalDeveloperName>LREIndicator__c</externalDeveloperName>
        <label>LRE Indicator</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language_c__c</fullName>
        <externalDeveloperName>Language__c</externalDeveloperName>
        <label>Language</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LastATCSentDateTime_c__c</fullName>
        <externalDeveloperName>LastATCSentDateTime__c</externalDeveloperName>
        <label>Last ATC Sent Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastCommentLevel_c__c</fullName>
        <externalDeveloperName>LastCommentLevel__c</externalDeveloperName>
        <inlineHelpText>User Level of the last case comment.</inlineHelpText>
        <label>Last Comment Level</label>
        <length>10</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastL2EscalationDate_c__c</fullName>
        <externalDeveloperName>LastL2EscalationDate__c</externalDeveloperName>
        <inlineHelpText>The last time the Case was escalated from level 1 to Level 2</inlineHelpText>
        <label>Last L2 Escalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastL2toL1DeescalationDate_c__c</fullName>
        <externalDeveloperName>LastL2toL1DeescalationDate__c</externalDeveloperName>
        <inlineHelpText>Last Date/Time of L2 to L1 Case reassignment</inlineHelpText>
        <label>Last L2 to L1 Deescalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <referenceTo>User__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case3</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Name_c__c</fullName>
        <externalDeveloperName>Last_Modified_By_Name__c</externalDeveloperName>
        <label>Last Modified By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level2Closed_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Level2Closed__c</externalDeveloperName>
        <label>Level 2 Closed</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level2FollowUp_c__c</fullName>
        <externalDeveloperName>Level2FollowUp__c</externalDeveloperName>
        <inlineHelpText>Field Displayed in the List view</inlineHelpText>
        <label>Level 2 Follow Up</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level_1_Owner_Name_c__c</fullName>
        <externalDeveloperName>Level_1_Owner_Name__c</externalDeveloperName>
        <label>Level 1 Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFieldAction_c__c</fullName>
        <externalDeveloperName>LocalFieldAction__c</externalDeveloperName>
        <label>Local Field Action</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_c__c</fullName>
        <externalDeveloperName>Market__c</externalDeveloperName>
        <inlineHelpText>Account's Market</inlineHelpText>
        <label>Market</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MaterialCode_c__c</fullName>
        <externalDeveloperName>MaterialCode__c</externalDeveloperName>
        <label>Material Code</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MilestoneStatus__c</fullName>
        <externalDeveloperName>MilestoneStatus</externalDeveloperName>
        <label>Milestone Status</label>
        <length>30</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewComment_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>NewComment__c</externalDeveloperName>
        <inlineHelpText>Checked: There is a new Case Comment is created
Once the comment read, the user has to manually uncheck it.</inlineHelpText>
        <label>is New Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NextStepsDetails_c__c</fullName>
        <externalDeveloperName>NextStepsDetails__c</externalDeveloperName>
        <inlineHelpText>[ Sofyen comment: Wave1+2 legacy field. I think it can be deleted. Check with integrations team ]</inlineHelpText>
        <label>Next Steps Details</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NoInvestJustif_c__c</fullName>
        <externalDeveloperName>NoInvestJustif__c</externalDeveloperName>
        <inlineHelpText>Decision tree auto-updates "INVEST" field to Yes or No. 
If "INVEST"=No, then "No Invest Justification" is mandatory</inlineHelpText>
        <label>No Invest Justification</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case6</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>NotSatisfied_c__c</fullName>
        <externalDeveloperName>NotSatisfied__c</externalDeveloperName>
        <label>Not Satisfied</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenDurationDaysCase_c__c</fullName>
        <externalDeveloperName>OpenDurationDaysCase__c</externalDeveloperName>
        <inlineHelpText>Reporting Field Only. Closed Date minus Open Date to calculate days open for case.</inlineHelpText>
        <label>Open Duration Days Case</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opened_Date__c</fullName>
        <label>Opened Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>